--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
 
-    <title>React App</title>
+    <title>La Boîte d'à côté</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
